<resources>
    <string name="app_name">Sleep Journal</string>
    <string name="made_in_stanford">Made in Stanford with ❤️ (more info)</string>

    <string name="format_quote">\"%1$s\"</string>
    <string name="format_awake">Awake: %1$s</string>
    <string name="format_asleep">Asleep: %1$s</string>
    <string name="format_slept_for">Slept for: %1$s</string>
    <string name="format_napped_for">Napped for: %1$s</string>
    <string name="format_groggy_for">Groggy for: %1$s</string>

    <string name="tap_to_edit">(tap to edit)</string>

    <string name="content_description_about">About this Application</string>
    <string name="content_description_save_data">Save sleep data</string>
    <string name="content_description_graph_day">View Graph for day</string>
    <string name="content_description_edit_data">Edit Displayed Data</string>

    <string name="mood_1">Very Alert</string>
    <string name="mood_2">Alert</string>
    <string name="mood_3">Neutral</string>
    <string name="mood_4">Sleepy</string>
    <string name="mood_5">Very Sleepy</string>
    <string name="mood_6">Asleep</string>
    <string name="mood_default">Unknown</string>
    <string name="update">Update</string>
    <string name="dialog_info_asleep">Asleep:</string>
    <string name="dialog_info_awake">Awake</string>
    <string name="export_data">Export Data</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="days_to_export"># of days to export</string>
    <string name="starting_from">Get data starting from</string>
    <string name="save">Save</string>
    <string name="author_note">Created by Anninna Hanlon and Santiago Gutierrez for PSYC-135. \n\nAll data used in the app is from Dr. Dement\'s Sleep and Dreams.</string>
</resources>
